# sdl2-gl-project-template

./: .clang-format  CMakeLists.txt  README.md  io_util.hpp  main.cpp  model.cpp  model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vcpkg.json
.github/workflows/: macos.yml  non-main.yml  ubuntu.yml  windows.yml
shaders/: shader.frag  shader.vert
